# HyperBoxLauncher

./: .gitignore  MANIFEST_FORMAT.md  README.md  pyproject.toml  test.html
.github/workflows/: build.yml  test
src/: _config_.py  auth.py  authentication.py  client.py  files.py  main4.py  services.py  utils.py
src/gui/: index.html  index.jsx  style.css
src/gui/apps/: loading.jsx  login.jsx  main.jsx
src/hyperbox.launcher/: _config_.py  auth.py  client.py  main4.py  services.py  utils.py  webview_api.py
src/hyperbox.launcher/launcher/: command.py  launcher.py  loader.py
src/launcher/: launcher.py
src/webUI/: background.js  index.html  index.jsx  style.css
src/webUI/apps/: loading.scene.jsx  login.scene.jsx  main.scene.jsx
src/webUI/apps/overlay/: error.jsx  gamelog.jsx  settings.jsx
src/webUI/libs/: babel.min.js
