[project]
name = "HyperBoxLauncher"
version = "0.1.0"
description = "Launcher for my minecraft project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.2",
    "dotenv>=0.9.9",
    "gobject>=0.1.0",
    "loguru>=0.7.3",
    "minecraft-launcher-lib>=8.0",
    "nuitka>=2.8.8",
    "pillow>=12.0.0",
    "psutil>=7.1.3",
    "pygobject>=3.54.5",
    "pyqt6>=6.10.1",
    "pyqt6-webengine>=6.10.0",
    "pyside6>=6.10.1",
    "pywebview==6.1",
    "qtpy>=2.4.3",
    "requests>=2.32.5",
    "tenacity>=9.1.2",
]
